fix: update the h1 and logos size on mobile

--- a/front/src/styles/Footer.css
+++ b/front/src/styles/Footer.css
@@ -14,6 +14,7 @@
 
 @media only screen and (max-width: 600px) {
     .logo {
-        max-height: 50px;
+        max-height: 35px;
+        padding: 5px;
     }
-  }
+}
